--- a/index.html
+++ b/index.html
@@ -36,6 +36,25 @@
 		</div>
 
 		<div id="scroll-target" class="portfolio-container">
+			<div class="col">
+
+				<!-- SCHOOLING -->
+				<div class="grid-row mt-big">
+					<h2>Schooling</h2>
+					<div class="item-list">
+						<div class="item">
+							<div class="item-right">
+								<h3>Higher School of Communication of Tunis (Sup'Com)</h3>
+								<p class="alt-txt show-mob mt-xsml">Aug 2010 - Jun 2015</p>
+								<!-- <p class="mt-xsml">Visser 't Hoofd Lyceum Leiden</p> -->
+							</div>
+							<div class="item-left">
+								<p class="alt-txt">Aug 2010 - Jun 2015</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<script src="main.js"></script>
