Work experience Fugro

--- a/index.html
+++ b/index.html
@@ -1,64 +1,102 @@
 <!DOCTYPE html>
 <html lang="en" class="font-size">
 
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="The portfolio of Neïla Damak">
-		<title>Neïla Damak</title>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="The portfolio of Neïla Damak">
+	<title>Neïla Damak</title>
 
-		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
-	</head>
+	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="reset.css">
+	<link rel="stylesheet" href="style.css">
+</head>
 
-	<body class="portfolio-body">
-		<div class="page-container">
-			<div class="col">
-				<div class="grid landing-grid">
-					<div id="lottie-mob" class="show-mob"></div>
-					<h1 class="landing-txt hide-mob">
-						Hey, <br>
-						<br>
-						I'm <span class="bold accent">Neïla Damak</span>,<br>
-						a <span class="bold accent">cyber security</span> analyst<br>
-					</h1>
-					<h1 class="show-mob">
-						<span class="bold accent">Neïla Damak</span><br>
-						cyber security analyst
-					</h1>
-					<div id="scroll-down-arrow" class="arrow-wrapper hide-mob">
-						<div class="arrow"></div>
-					</div>
+<body class="portfolio-body">
+	<div class="page-container">
+		<div class="col">
+			<div class="grid landing-grid">
+				<div id="lottie-mob" class="show-mob"></div>
+				<h1 class="landing-txt hide-mob">
+					Hey, <br>
+					<br>
+					I'm <span class="bold accent">Neïla Damak</span>,<br>
+					a <span class="bold accent">cyber security</span> analyst<br>
+				</h1>
+				<h1 class="show-mob">
+					<span class="bold accent">Neïla Damak</span><br>
+					cyber security analyst
+				</h1>
+				<div id="scroll-down-arrow" class="arrow-wrapper hide-mob">
+					<div class="arrow"></div>
 				</div>
 			</div>
 		</div>
+	</div>
 
-		<div id="scroll-target" class="portfolio-container">
-			<div class="col">
+	<div id="scroll-target" class="portfolio-container">
+		<div class="col">
 
-				<!-- SCHOOLING -->
-				<div class="grid-row mt-big">
-					<h2>Schooling</h2>
-					<div class="item-list">
-						<div class="item">
-							<div class="item-right">
-								<h3>Higher School of Communication of Tunis (Sup'Com)</h3>
-								<p class="alt-txt show-mob mt-xsml">Aug 2010 - Jun 2015</p>
-								<!-- <p class="mt-xsml">Visser 't Hoofd Lyceum Leiden</p> -->
-							</div>
-							<div class="item-left">
-								<p class="alt-txt">Aug 2010 - Jun 2015</p>
-							</div>
+			<!-- SCHOOLING -->
+			<div class="grid-row mt-big">
+				<h2>Schooling</h2>
+				<div class="item-list">
+					<div class="item">
+						<div class="item-right">
+							<h3>Higher School of Communication of Tunis (Sup'Com)</h3>
+							<p class="alt-txt show-mob mt-xsml">Aug 2010 - Jun 2015</p>
+							<!-- <p class="mt-xsml">Visser 't Hoofd Lyceum Leiden</p> -->
+						</div>
+						<div class="item-left">
+							<p class="alt-txt">Aug 2010 - Jun 2015</p>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<!-- EXPERIENCE -->
+			<div class="grid-row mt-big">
+				<h2>Experience</h2>
+				<div class="item-list">
+					<div class="item">
+						<div class="item-right">
+							<h3>Fugro</h3>
+							<p class="alt-txt show-mob mt-xsml">Aug 2017 - Dec 2018</p>
+							<p class="mt-xsml">Cyber Security Analyst</p>
+							<p class="mt-sml">
+								Fugro experience description
+							</p>
+						</div>
+						<div class="item-left">
+							<p class="alt-txt">Aug 2017 - Dec 2018</p>
+						</div>
+					</div>
+					<div class="item mt-med">
+						<div class="item-right">
+							<h3>Forescout</h3>
+							<p class="alt-txt show-mob mt-xsml">Jan 2019 - Present</p>
+							<p class="mt-xsml">Font-end development & design</p>
+							<p class="mt-sml">
+								Forescout experience description
+
+							</p>
+						</div>
+						<div class="item-left">
+							<p class="alt-txt">Jan 2019 - Present</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
 		</div>
 
-		<script src="main.js"></script>
+	</div>
 
-	</body>
+	<script src="main.js"></script>
+
+</body>
 
 </html>
