added more sections

--- a/index.html
+++ b/index.html
@@ -2,100 +2,305 @@
 <html lang="en" class="font-size">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="The portfolio of Neïla Damak">
-	<title>Neïla Damak</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The portfolio of Neïla Damak">
+  <title>Neïla Damak</title>
 
-	<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="portfolio-body">
-	<div class="page-container">
-		<div class="col">
-			<div class="grid landing-grid">
-				<div id="lottie-mob" class="show-mob"></div>
-				<h1 class="landing-txt hide-mob">
-					Hey, <br>
-					<br>
-					I'm <span class="bold accent">Neïla Damak</span>,<br>
-					a <span class="bold accent">cyber security</span> analyst<br>
-				</h1>
-				<h1 class="show-mob">
-					<span class="bold accent">Neïla Damak</span><br>
-					cyber security analyst
-				</h1>
-				<div id="scroll-down-arrow" class="arrow-wrapper hide-mob">
-					<div class="arrow"></div>
-				</div>
-			</div>
-		</div>
-	</div>
+  <div class="page-container">
+    <div class="col">
+      <div class="grid landing-grid">
+        <div id="lottie-mob" class="show-mob"></div>
+        <h1 class="landing-txt hide-mob">
+          Hey, <br>
+          <br>
+          I'm <span class="bold accent">Neïla Damak</span>,<br>
+          a <span class="bold accent">Cyber Security</span> Analyst<br>
+        </h1>
+        <h1 class="show-mob">
+          <span class="bold accent">Neïla Damak</span><br>
+          Cyber Security Analyst
+        </h1>
+        <div id="scroll-down-arrow" class="arrow-wrapper hide-mob">
+          <div class="arrow"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-	<div id="scroll-target" class="portfolio-container">
-		<div class="col">
+  <div id="scroll-target" class="portfolio-container">
+    <div class="col">
 
-			<!-- SCHOOLING -->
-			<div class="grid-row mt-big">
-				<h2>Schooling</h2>
-				<div class="item-list">
-					<div class="item">
-						<div class="item-right">
-							<h3>Higher School of Communication of Tunis (Sup'Com)</h3>
-							<p class="alt-txt show-mob mt-xsml">Aug 2010 - Jun 2015</p>
-							<!-- <p class="mt-xsml">Visser 't Hoofd Lyceum Leiden</p> -->
-						</div>
-						<div class="item-left">
-							<p class="alt-txt">Aug 2010 - Jun 2015</p>
-						</div>
-					</div>
-				</div>
-			</div>
+      <!-- SCHOOLING -->
+      <div class="grid-row mt-big">
+        <h2>Education</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <h3>Higher School of Communication of Tunis (Sup'Com)</h3>
+              <p class="mt-xsml sub-header">ICT Engineer</p>
+              <!-- <p class="mt-xsml">Visser 't Hoofd Lyceum Leiden</p> -->
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">January 2023</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-			<!-- EXPERIENCE -->
-			<div class="grid-row mt-big">
-				<h2>Experience</h2>
-				<div class="item-list">
-					<div class="item">
-						<div class="item-right">
-							<h3>Fugro</h3>
-							<p class="alt-txt show-mob mt-xsml">Aug 2017 - Dec 2018</p>
-							<p class="mt-xsml">Cyber Security Analyst</p>
-							<p class="mt-sml">
-								Fugro experience description
-							</p>
-						</div>
-						<div class="item-left">
-							<p class="alt-txt">Aug 2017 - Dec 2018</p>
-						</div>
-					</div>
-					<div class="item mt-med">
-						<div class="item-right">
-							<h3>Forescout</h3>
-							<p class="alt-txt show-mob mt-xsml">Jan 2019 - Present</p>
-							<p class="mt-xsml">Font-end development & design</p>
-							<p class="mt-sml">
-								Forescout experience description
+      <!-- EXPERIENCE -->
+      <div class="grid-row mt-big">
+        <h2>Experience</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <h3>Fugro</h3>
+              <p class="alt-txt show-mob mt-xsml">February 2023 - Now</p>
+              <p class="mt-xsml sub-header">Cyber Security Analyst</p>
+              <p class="mt-sml">
+              <ul>
+                <li>Performed threat modelling and application reviews for internal projects to identify
+                  security gaps as well
+                  as recommend remediation strategies.</li>
+                <li>Led the implementation of 40% of CIS hardening projects in the region, strengthening
+                  the organization's
+                  security posture</li>
+                <li>Executed incident response activities using MS Defender and
+                  CrowdStrike, investigating, containing, and
+                  remediating security breaches to minimize downtime and data loss. (SOC Tier 2)</li>
+                <li>Managed and contributed to DevSecOps services, collaborating with software
+                  development teams in the
+                  company to embed security best practices in their software.</li>
+                <li>Contributed the company’s vulnerability management initiatives, including
+                  vulnerability assessment,
+                  mitigation, and delivering comprehensive reports to stakeholders.</li>
+              </ul>
 
-							</p>
-						</div>
-						<div class="item-left">
-							<p class="alt-txt">Jan 2019 - Present</p>
-						</div>
-					</div>
-				</div>
-			</div>
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">February 2023 - Now</p>
+            </div>
+          </div>
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>Forescout</h3>
+              <p class="alt-txt show-mob mt-xsml">April 2022 - October 2022</p>
+              <p class="mt-xsml sub-header">Threat Intelligence Intern</p>
+              <p class="mt-sml">
+              <ul>
+                <li>Contributed to the development of the VedereLabs Threat Feed Service, enabling users
+                  to retrieve over
+                  100 daily Indicators of Compromise (IoCs) related to IoT, IoMT, and OT security.
+                </li>
+                <li>Designed and implemented API endpoints for efficient retrieval of IoCs, enhancing
+                  accessibility and
+                  integration of threat intelligence data.</li>
+                <li>
+                  Conducted in-depth analysis of threat data by mapping Tactics, Techniques, and
+                  Procedures (TTPs)
+                  from the MITRE ATT&CK framework to the IoCs, and thus improving the relevance and
+                  utility of threat intelligence for end users.
+                </li>
+              </ul>
+
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">April 2022 - October 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Projects -->
+      <div class="grid-row mt-big">
+        <h2>Projects</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <h3>Movie Recommendation System</h3>
+              <p class="alt-txt show-mob mt-xsml">February 2021 - May 2021</p>
+              <!-- <p class="mt-xsml sub-header">Movie Recommendation System</p> -->
+              <p class="mt-sml">
+                Developed a Movie Recommendation System using Python, leveraging the MovieLens dataset,
+                Collaborative Filtering, and the Apriori Algorithm to provide personalized movie suggestions through
+                machine learning techniques.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">February 2021 - May 2021</p>
+            </div>
+          </div>
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>Job Finder App</h3>
+              <p class="alt-txt show-mob mt-xsml">November 2020 - February 2021</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                Developed the user interface of a job search application using Flutter, enabling users to seamlessly
+                browse and find job opportunities in the IT and Design sectors.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">November 2020 -February 2021
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- LEADERSHIP EXPERIENCE & ACTIVITIES -->
+      <div class="grid-row mt-big">
+        <h2>LEADERSHIP EXPERIENCE & ACTIVITIES</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <h3>Young Fugro</h3>
+              <p class="alt-txt show-mob mt-xsml">November 2023 - Now</p>
+              <p class="mt-xsml sub-header">Vice Chair</p>
+              <p class="mt-sml">
+                Organized and managed a variety of events, from social gatherings to educational events, while
+                overseeing marketing strategies and content creation for the Young Fugro Network to drive engagement
+                and attendance.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">November 2023 - Now</p>
+            </div>
+          </div>
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>IEEE Computer Society - Sup'Com Student Branch</h3>
+              <p class="mt-xsml sub-header">Co-founder & Chairwoman</p>
+              <p class="alt-txt show-mob mt-xsml">February 2020 - March 2021</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                Launched the chapter that focuses on software
+                engineering disciplines and activities. It currently has over 30 members.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">February 2020 - March 2021</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Certificates -->
+      <div class="grid-row mt-big">
+        <h2>Certificates</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <h3>Cisco Certified CyberOps Associate</h3>
+              <p class="alt-txt show-mob mt-xsml">2022 - 2025</p>
+              <!-- <p class="mt-xsml sub-header">Vice Chair</p> -->
+              <p class="mt-sml">
+                The Cisco Certified CyberOps Associate certification validates foundational knowledge and skills in
+                cybersecurity operations. It focuses on core concepts such as threat intelligence, incident response,
+                security monitoring, and intrusion analysis using security information and event management (SIEM)
+                tools.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">November 2023 - Now</p>
+            </div>
+          </div>
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>CompTIA Security+</h3>
+              <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
+              <p class="alt-txt show-mob mt-xsml">ongoing</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                The CompTIA Security+ certification is a globally recognized credential that validates foundational
+                skills in cybersecurity. It covers essential topics such as risk management, network security, incident
+                response, identity and access management, and compliance
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">February 2020 - March 2021</p>
+            </div>
+          </div>
+
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>(ISC)² Certified in Cybersecurity</h3>
+              <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
+              <p class="alt-txt show-mob mt-xsml">date</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                The (ISC)² Certified in Cybersecurity certification is a credential that demonstrates
+                foundational knowledge in key cybersecurity principles. It covers essential topics such as security
+                concepts, access control, network security, incident response, and risk management.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">date</p>
+            </div>
+          </div>
+
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>NIST CSF v2</h3>
+              <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
+              <p class="alt-txt show-mob mt-xsml">November 2024</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                Launched the chapter that focuses on software
+                engineering disciplines and activities. It currently has over 30 members.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">November 2024</p>
+            </div>
+          </div>
+
+
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>ITIL 4 Foundation in IT Service Management</h3>
+              <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
+              <p class="alt-txt show-mob mt-xsml">April 2024 - April 2027</p>
+              <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
+              <p class="mt-sml">
+                The ITIL 4 Foundation in IT Service Management certification provides a comprehensive introduction to
+                the ITIL framework, focusing on modern IT service management practices. It covers key concepts such as
+                the service value system (SVS), guiding principles, and ITIL practices.  It enables professionals to align
+                IT services with business goals.
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">April 2024 - April 2027</p>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
-		</div>
 
-	</div>
 
-	<script src="main.js"></script>
+  </div>
+
+  </div>
+
+  <script src="main.js"></script>
 
 </body>
 
