small changes in Certificates section

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
               </p>
             </div>
             <div class="item-left">
-              <p class="alt-txt">February 2020 - March 2021</p>
+              <p class="alt-txt">Ongoing</p>
             </div>
           </div>
 
@@ -239,7 +239,7 @@
             <div class="item-right">
               <h3>(ISC)² Certified in Cybersecurity</h3>
               <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
-              <p class="alt-txt show-mob mt-xsml">date</p>
+              <p class="alt-txt show-mob mt-xsml">July 2023</p>
               <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
               <p class="mt-sml">
                 The (ISC)² Certified in Cybersecurity certification is a credential that demonstrates
@@ -248,19 +248,21 @@
               </p>
             </div>
             <div class="item-left">
-              <p class="alt-txt">date</p>
+              <p class="alt-txt">July 2023</p>
             </div>
           </div>
 
           <div class="item mt-med">
             <div class="item-right">
-              <h3>NIST CSF v2</h3>
+              <h3>Certified NIST CSF v2.0</h3>
               <!-- <p class="mt-xsml sub-header">Co-founder & Chairwoman</p> -->
               <p class="alt-txt show-mob mt-xsml">November 2024</p>
               <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
               <p class="mt-sml">
-                Launched the chapter that focuses on software
-                engineering disciplines and activities. It currently has over 30 members.
+                The Certified NIST Cybersecurity Framework (CSF) v2.0 certification is provided by Ampcus Cyber. It validates a professional's expertise
+                in applying the NIST Cybersecurity Framework to enhance organizational security. It demonstrates
+                proficiency in implementing the framework's core functions—Identify, Protect, Detect, Respond, and
+                Recover—to manage cybersecurity risks effectively.
               </p>
             </div>
             <div class="item-left">
@@ -278,7 +280,8 @@
               <p class="mt-sml">
                 The ITIL 4 Foundation in IT Service Management certification provides a comprehensive introduction to
                 the ITIL framework, focusing on modern IT service management practices. It covers key concepts such as
-                the service value system (SVS), guiding principles, and ITIL practices.  It enables professionals to align
+                the service value system (SVS), guiding principles, and ITIL practices. It enables professionals to
+                align
                 IT services with business goals.
               </p>
             </div>
@@ -286,7 +289,7 @@
               <p class="alt-txt">April 2024 - April 2027</p>
             </div>
           </div>
-          
+
         </div>
       </div>
     </div>
