Adding 3 more sections

--- a/index.html
+++ b/index.html
@@ -259,10 +259,11 @@
               <p class="alt-txt show-mob mt-xsml">November 2024</p>
               <!-- <p class="mt-xsml sub-header">Threat Intelligence Intern</p> -->
               <p class="mt-sml">
-                The Certified NIST Cybersecurity Framework (CSF) v2.0 certification is provided by Ampcus Cyber. It validates a professional's expertise
+                The Certified NIST Cybersecurity Framework (CSF) v2.0 certification is provided by Ampcus Cyber. It
+                validates a professional's expertise
                 in applying the NIST Cybersecurity Framework to enhance organizational security. It demonstrates
-                proficiency in implementing the framework's core functions—Identify, Protect, Detect, Respond, and
-                Recover—to manage cybersecurity risks effectively.
+                proficiency in implementing the framework's core functions (Identify, Protect, Detect, Respond, and
+                Recover) to manage cybersecurity risks effectively.
               </p>
             </div>
             <div class="item-left">
@@ -292,19 +293,87 @@
 
         </div>
       </div>
+
+      <!-- TOOLKIT -->
+      <div class="grid-row toolkit mt-big">
+        <h2>Toolkit</h2>
+        <div class="toolkit-col">
+          <div>
+            <h3> Programming Languages</h3>
+            <p class="mt-xsml">Javascript</p>
+            <p>Python</p>
+            <p>C/C++</p>
+            <p>CSS</p>
+            <p>HTML></p>
+          </div>
+
+          <div class="tools-col">
+            <h3>Tools</h3>
+            <p class="mt-xsml">MS Defender</p>
+            <p>CrowdStrike Falcon</p>
+            <p>LogScale</p>
+            <p>Docker</p>
+            <p>Threat Dragon</p>
+            <p>Wireshark</p>
+            <p>Volatility</p>
+            <p>FastAPI</p>
+            <p>ElasticSearch</p>
+          </div>
+        </div>
+
+
+
+      </div>
+
+      <!-- Languages -->
+      <div class="grid-row toolkit mt-big">
+        <h2>Languages</h2>
+        <div class="toolkit-col">
+          <div>
+            <h3> Arabic</h3>
+            <p class="mt-xsml">Native</p>
+
+          </div>
+          <div class="tools-col">
+            <h3>French</h3>
+            <p class="mt-xsml">Proficient</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid-row toolkit mt-sml">
+        <span></span>
+        <div class="toolkit-col">
+          <div>
+            <h3>English</h3>
+            <p class="mt-xsml">Proficient</p>
+          </div>
+          <div class="tools-col">
+            <h3>Dutch</h3>
+            <p class="mt-xsml">B1 Level</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid-row mt-big mb-big">
+        <h2>Contact Me</h2>
+        <div class="item-list">
+          <div class="item">
+            <div class="item-right">
+              <a class="h3" href="mailto:neila.damak@gmail.com"
+                target="_blank">neila.damak@gmail.com</a>
+              <p class="contact-desciption">Email</p>
+              <a class="h3 mt-med" href="https://www.linkedin.com/in/neila-damak-780877196/"
+                target="_blank">Neila Damak</a>
+              <p class="contact-desciption">LinkedIn</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
-
-
-
-
 
   </div>
-
-  </div>
-
   <script src="main.js"></script>
-
 </body>
 
 </html>
