added my internship experiences

--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
       <div class="grid landing-grid">
         <div id="lottie-mob" class="show-mob"></div>
         <h1 class="landing-txt hide-mob">
-          Hey, <br>
+          Hello, <br>
           <br>
           I'm <span class="bold accent">Neïla Damak</span>,<br>
           a <span class="bold accent">Cyber Security</span> Analyst<br>
+          and an <span class="bold accent">IT Engineer</span> Graduate.<br>
         </h1>
         <h1 class="show-mob">
           <span class="bold accent">Neïla Damak</span><br>
@@ -111,6 +112,49 @@
                   utility of threat intelligence for end users.
                 </li>
               </ul>
+
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">April 2022 - October 2022</p>
+            </div>
+          </div>
+
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>ELYADATA</h3>
+              <p class="alt-txt show-mob mt-xsml">July 2021 - September 2021</p>
+              <p class="mt-xsml sub-header">Threat Intelligence Intern</p>
+              <p class="mt-sml">
+              <ul>
+                <li>
+                  Designed and implemented an automated system to extract data from Libyan passport images using
+                  advanced machine learning techniques.
+                </li>
+                <li>Executed comprehensive research on various GAN-based methodologies for data augmentation and
+                  evaluated their applicability and performance.</li>
+                <li>
+                  Leveraged Deep Convolutional Generative Adversarial Networks (DCGANs) to generate synthetic images of
+                  Libyan passports.
+                </li>
+              </ul>
+
+              </p>
+            </div>
+            <div class="item-left">
+              <p class="alt-txt">April 2022 - October 2022</p>
+            </div>
+          </div>
+
+          <div class="item mt-med">
+            <div class="item-right">
+              <h3>YobiTrust</h3>
+              <p class="alt-txt show-mob mt-xsml">July 2020 - September 2020</p>
+              <p class="mt-xsml sub-header">Frontend Developer</p>
+              <p class="mt-sml">
+                Designed and implemented a user interface in ,React Native for a cognitive assessment tool aimed at
+                identifying early signs of dementia. The app guides users through a series of 12 mini-tests, providing a
+                final score that helps assess the user's risk of dementia.
 
               </p>
             </div>
@@ -360,11 +404,10 @@
         <div class="item-list">
           <div class="item">
             <div class="item-right">
-              <a class="h3" href="mailto:neila.damak@gmail.com"
-                target="_blank">neila.damak@gmail.com</a>
+              <a class="h3" href="mailto:neila.damak@gmail.com" target="_blank">neila.damak@gmail.com</a>
               <p class="contact-desciption">Email</p>
-              <a class="h3 mt-med" href="https://www.linkedin.com/in/neila-damak-780877196/"
-                target="_blank">Neila Damak</a>
+              <a class="h3 mt-med" href="https://www.linkedin.com/in/neila-damak-780877196/" target="_blank">Neila
+                Damak</a>
               <p class="contact-desciption">LinkedIn</p>
             </div>
           </div>
