--- a/index.html
+++ b/index.html
@@ -345,10 +345,11 @@
           <div>
             <h3> Programming Languages</h3>
             <p class="mt-xsml">Javascript</p>
+            <p>Java</p>
             <p>Python</p>
             <p>C/C++</p>
             <p>CSS</p>
-            <p>HTML></p>
+            <p>HTML</p>
           </div>
 
           <div class="tools-col">
